--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "npm": "8.19.3"
   },
   "dependencies": {
-    "chewit": "github:pilotmoon/chewit",
+    "@pilotmoon/chewit": "0.1.1",
     "koa": "2.14.1",
     "mongodb": "5.0.0",
     "zod": "3.20.2"
