--- a/package.json
+++ b/package.json
@@ -3,22 +3,43 @@
   "version": "0.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "env": "[[ -f .env ]] || op inject -i .env-template -o .env",
+    "build": "npx tsc",
+    "start": "node dist/src/server.js",
+    "dev": "npm run env && source .env && npx tsc-watch --onSuccess \"npm run start\"",
+    "test": "npm run env && source .env && npx ava",
+    "test-watch": "npm run env && source .env && npx ava --watch"
   },
   "private": true,
   "engines": {
     "node": "16.19.0",
     "npm": "8.19.3"
   },
+  "ava": {
+    "files": [
+      "dist/test/test*.js"
+    ]
+  },
   "dependencies": {
+    "@koa/router": "12.0.0",
     "@pilotmoon/chewit": "0.2.0",
+    "@types/koa-bodyparser": "4.3.10",
+    "@types/lodash": "4.14.191",
+    "axios": "1.3.2",
+    "colors": "1.4.0",
     "koa": "2.14.1",
+    "koa-bodyparser": "4.3.0",
+    "lodash": "4.17.21",
     "mongodb": "5.0.0",
-    "zod": "3.20.2"
+    "zod": "3.20.2",
+    "zod-validation-error": "0.3.1"
   },
   "devDependencies": {
     "@types/koa": "2.13.5",
+    "@types/koa__router": "12.0.0",
+    "@types/node": "18.13.0",
+    "ava": "5.2.0",
+    "tsc-watch": "6.0.0",
     "typescript": "4.9.5"
   }
 }
