--- a/.env-template
+++ b/.env-template
@@ -1,3 +1,4 @@
 #!/bin/zsh
 export DATABASE_URL="op://dev/seal-app/dburl"
 export APP_PORT="op://dev/seal-app/port"
+export APP_URL="http://localhost:${APP_PORT}"
