Get tests working again

--- a/.env-template
+++ b/.env-template
@@ -4,3 +4,4 @@ export APP_PORT="op://dev/seal-app/port"
 export APP_URL="http://localhost:${APP_PORT}"
 export DATABASE_NAME_LIVE=pilotmoon
 export DATABASE_NAME_TEST=testdb
+export API_KEY_TEST_GOOD="op://dev/seal-app/api_key_test_good"
