make description required; improve tests

--- a/.env-template
+++ b/.env-template
@@ -5,3 +5,5 @@ export APP_URL="http://localhost:${APP_PORT}"
 export DATABASE_NAME_LIVE=pilotmoon
 export DATABASE_NAME_TEST=testdb
 export API_KEY_TEST_GOOD="op://dev/seal-app/api_key_test_good"
+export API_KEY_ID_TEST_GOOD="op://dev/seal-app/api_key_id_test_good"
+export API_KEY_TEST_NO_SCOPES="op://dev/seal-app/api_key_test_no_scopes"
