--- a/.env-template
+++ b/.env-template
@@ -7,4 +7,5 @@ export DATABASE_NAME_TEST=testdb
 export API_KEY_TEST_GOOD="op://dev/seal-app/api_key_test_good"
 export API_KEY_ID_TEST_GOOD="op://dev/seal-app/api_key_id_test_good"
 export API_KEY_TEST_NO_SCOPES="op://dev/seal-app/api_key_test_no_scopes"
+export PATH_PREFIX=""
 export COMMIT_HASH=""
