fix .env-template and add test-prod script

--- a/.env-template
+++ b/.env-template
@@ -1,11 +1,18 @@
 #!/bin/zsh
-export DATABASE_URL="op://dev/seal-app/dburl"
 export APP_PORT="op://dev/seal-app/port"
-export APP_URL="http://localhost:${APP_PORT}"
+export APP_URL_DEV="http://localhost:${APP_PORT}"
+export APP_URL_PROD="https://api.pilotmoon.com/v2"
+export APP_URL=${APP_URL_DEV}
+
+export DATABASE_URL="op://dev/seal-app/dburl"
 export DATABASE_NAME_LIVE=pilotmoon
 export DATABASE_NAME_TEST=testdb
+
+export PATH_PREFIX=""
+export COMMIT_HASH=""
+
 export API_KEY_TEST_GOOD="op://dev/seal-app/api_key_test_good"
 export API_KEY_ID_TEST_GOOD="op://dev/seal-app/api_key_id_test_good"
 export API_KEY_TEST_NO_SCOPES="op://dev/seal-app/api_key_test_no_scopes"
-export PATH_PREFIX=""
-export COMMIT_HASH=""
+export API_KEY_ID_TEST_NO_SCOPES="ak_3llHaQfhXMRBoWIo7fpaZP4k"
+
