--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npx tsc",
     "start": "node dist/src/server.js",
     "dev": "npm run env && source .env && npx tsc-watch --onSuccess \"npm run start\"",
-    "test": "npm run env && source .env && npx ava",
+    "test": "npm run env && source .env && npx ava --serial",
     "test-prod": "npm run env && source .env && export APP_URL=${APP_URL_PROD} && npx ava --serial"
   },
   "private": true,
