--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,6 +9,19 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  APP_PORT: "${{ vars.APP_PORT }}"
+  APP_URL: "${{ vars.APP_URL }}"
+  DATABASE_URL: "${{ secrets.DATABASE_URL }}"
+  DATABASE_NAME_LIVE: "${{ vars.DATABASE_NAME_LIVE }}"
+  DATABASE_NAME_TEST: "${{ vars.DATABASE_NAME_TEST }}"
+  PATH_PREFIX: ""
+  COMMIT_HASH: ""
+  API_KEY_TEST_GOOD: "${{ secrets.API_KEY_TEST_GOOD }}"
+  API_KEY_ID_TEST_GOOD: "${{ secrets.API_KEY_ID_TEST_GOOD }}"
+  API_KEY_TEST_NO_SCOPES: "${{ secrets.API_KEY_TEST_NO_SCOPES }}"
+  API_KEY_ID_TEST_NO_SCOPES: "${{ secrets.API_KEY_ID_TEST_NO_SCOPES }}"
+
 jobs:
   build:
 
@@ -27,5 +40,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run build --if-present
+    - run: npm run build
     - run: npm test
