change workflod database url from secrets to vars

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,7 +12,7 @@ on:
 env:
   APP_PORT: "${{ vars.APP_PORT }}"
   APP_URL: "${{ vars.APP_URL }}"
-  DATABASE_URL: "${{ secrets.DATABASE_URL }}"
+  DATABASE_URL: "${{ vars.DATABASE_URL }}"
   DATABASE_NAME_LIVE: "${{ vars.DATABASE_NAME_LIVE }}"
   DATABASE_NAME_TEST: "${{ vars.DATABASE_NAME_TEST }}"
   PATH_PREFIX: ""
