--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -48,5 +48,9 @@ jobs:
         mongodb-replica-set: rs0
     - run: npm ci
     - run: npm run build
-    - run: npm start
-    - run: npm test
+    - name: Run E2E Tests
+      uses: BerniWittmann/background-server-action@v1
+      with:
+        command: npm run tests
+        start: npm run start
+        wait-on: '${{ vars.APP_URL }}'
