--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,6 +51,6 @@ jobs:
     - name: Run E2E Tests
       uses: BerniWittmann/background-server-action@v1
       with:
-        command: npm run tests
+        command: npm run test
         start: npm run start
         wait-on: '${{ vars.APP_URL }}'
