welcome message and fix tests

--- a/.env-template
+++ b/.env-template
@@ -8,8 +8,7 @@ export DATABASE_URL="op://dev/seal-app/dburl"
 export DATABASE_NAME_LIVE=pilotmoon
 export DATABASE_NAME_TEST=testdb
 
-export PATH_PREFIX=""
-export COMMIT_HASH=""
+export COMMIT_HASH="" # set in scripts/dev and scripts/test
 
 export API_KEY_TEST_GOOD="op://dev/seal-app/api_key_test_good"
 export API_KEY_ID_TEST_GOOD="op://dev/seal-app/api_key_id_test_good"
