--- a/.env-template
+++ b/.env-template
@@ -9,9 +9,4 @@ export DATABASE_NAME_LIVE=pilotmoon
 export DATABASE_NAME_TEST=testdb
 
 export COMMIT_HASH="" # set in scripts/dev and scripts/test
-
-export API_KEY_TEST_GOOD="op://dev/seal-app/api_key_test_good"
-export API_KEY_ID_TEST_GOOD="op://dev/seal-app/api_key_id_test_good"
-export API_KEY_TEST_NO_SCOPES="op://dev/seal-app/api_key_test_no_scopes"
-export API_KEY_ID_TEST_NO_SCOPES="op://dev/seal-app/api_key_id_test_no_scopes"
-
+export BOOTSTRAP_SEED="op://dev/seal-app/bootstrap_seed"
