--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "koa-bodyparser": "4.3.0",
     "lodash": "4.17.21",
     "mongodb": "5.0.0",
+    "prando": "6.0.1",
     "zod": "3.20.2",
     "zod-validation-error": "0.3.1"
   },
