add bootstrap seed to workflow config

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,12 +15,8 @@ env:
   DATABASE_URL: "${{ vars.DATABASE_URL }}"
   DATABASE_NAME_LIVE: "${{ vars.DATABASE_NAME_LIVE }}"
   DATABASE_NAME_TEST: "${{ vars.DATABASE_NAME_TEST }}"
-  PATH_PREFIX: ""
   COMMIT_HASH: ""
-  API_KEY_TEST_GOOD: "${{ secrets.API_KEY_TEST_GOOD }}"
-  API_KEY_ID_TEST_GOOD: "${{ secrets.API_KEY_ID_TEST_GOOD }}"
-  API_KEY_TEST_NO_SCOPES: "${{ secrets.API_KEY_TEST_NO_SCOPES }}"
-  API_KEY_ID_TEST_NO_SCOPES: "${{ secrets.API_KEY_ID_TEST_NO_SCOPES }}"
+  BOOTSTRAP_SEED: "${{ secrets.BOOTSTRAP_SEED }}"
 
 jobs:
   build:
