--- a/.github/workflows/app-test.yml
+++ b/.github/workflows/app-test.yml
@@ -1,12 +1,13 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Build, test and deploy
+name: Test
 
 on:
   push:
-    tags:
-      - v*
+    branches:
+    - main
+
 env:
   APP_PORT: "${{ vars.APP_PORT }}"
   APP_URL: "${{ vars.APP_URL }}"
@@ -17,11 +18,11 @@ env:
   BOOTSTRAP_SEED: "${{ secrets.BOOTSTRAP_SEED }}"
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [16.x, 18.x]
         mongodb-version: ['6.0']
     steps:
     - uses: actions/checkout@v3
@@ -43,8 +44,4 @@ jobs:
         command: npm run test
         start: npm run start
         wait-on: '${{ vars.APP_URL }}'
-    - name: DigitalOcean App Platform deployment
-      uses: digitalocean/app_action@main
-      with:
-        app_name: seal-app
-        token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+
