Add IP whitelist

--- a/.env-template
+++ b/.env-template
@@ -10,3 +10,5 @@ export DATABASE_NAME_TEST=testdb
 
 export COMMIT_HASH="" # set in scripts/dev and scripts/test
 export BOOTSTRAP_SEED="op://dev/seal-app/bootstrap_seed"
+
+export ACCESS_WHITELIST=""
