--- a/.env-template
+++ b/.env-template
@@ -1,8 +1,10 @@
 #!/bin/zsh
 export APP_PORT="op://dev/seal-app/port"
 export APP_URL_DEV="http://localhost:${APP_PORT}"
-export APP_URL_PROD="https://api.pilotmoon.com/v2"
+export APP_URL_CANONICAL="https://api.pilotmoon.com/v2"
+export APP_URL_ALT="op://dev/seal-app/rolourl"
 export APP_URL=${APP_URL_DEV}
+export APP_TEST_URL=${APP_URL_DEV}
 
 export DATABASE_URL="op://dev/seal-app/dburl"
 export DATABASE_NAME_LIVE=pilotmoon
