--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "./scripts/build",
     "dev": "./scripts/dev",
     "test": "./scripts/test",
-    "test-prod": "./scripts/test-prod"
+    "test-prod": "./scripts/test-prod",
+    "test-prodx": "./scripts/test-prodx"
   },
   "private": true,
   "engines": {
