--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@pilotmoon/chewit": "0.2.2",
     "@types/koa-bodyparser": "4.3.10",
     "@types/lodash": "4.14.191",
+    "@types/ungap__structured-clone": "0.3.0",
+    "@ungap/structured-clone": "1.0.1",
     "axios": "1.3.2",
     "colors": "1.4.0",
     "koa": "2.14.1",
