Add secrets.ts and re-jigger test setup

--- a/.env-template
+++ b/.env-template
@@ -10,4 +10,6 @@ export DATABASE_URL="op://dev/seal-app/dburl"
 export DATABASE_NAME_LIVE=pilotmoon
 export DATABASE_NAME_TEST=testdb
 
+export APP_SECRET_TEST="op://dev/seal-app/app_secret_test"
+
 export BOOTSTRAP_SEED="op://dev/seal-app/bootstrap_seed"
