--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node ./dist/src/server.js",
     "build": "./scripts/build",
     "dev": "./scripts/dev",
-    "test": "./scripts/test",
+    "test-unit": "./scripts/test-unit",
+    "test-local": "./scripts/test-local",
     "test-prod": "./scripts/test-prod",
     "test-prodx": "./scripts/test-prodx"
   },
@@ -15,13 +16,9 @@
     "node": "16.19.0",
     "npm": "8.19.3"
   },
-  "ava": {
-    "files": [
-      "dist/test/test.js"
-    ]
-  },
   "dependencies": {
     "@koa/router": "12.0.0",
+    "@pilotmoon/aquatic-prime": "0.1.1",
     "@pilotmoon/chewit": "0.2.2",
     "@types/koa-bodyparser": "4.3.10",
     "@types/lodash": "4.14.191",
@@ -42,6 +39,7 @@
     "@types/koa__router": "12.0.0",
     "@types/node": "18.13.0",
     "ava": "5.2.0",
+    "ts-node": "10.9.1",
     "tsc-watch": "6.0.0",
     "typescript": "4.9.5"
   }
