--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "npm": "8.19.3"
   },
   "dependencies": {
+    "@isaacs/ttlcache": "1.2.1",
     "@koa/router": "12.0.0",
     "@pilotmoon/aquatic-prime": "0.1.1",
     "@pilotmoon/chewit": "0.2.2",
@@ -30,7 +31,6 @@
     "koa": "2.14.1",
     "koa-bodyparser": "4.3.0",
     "lodash": "4.17.21",
-    "lru-cache": "7.17.0",
     "mongodb": "5.0.0",
     "prando": "6.0.1",
     "zod": "3.20.2",
