--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "koa": "2.14.1",
     "koa-bodyparser": "4.3.0",
     "lodash": "4.17.21",
+    "mnemonic-id": "3.2.7",
     "mongodb": "5.0.0",
     "prando": "6.0.1",
     "zod": "3.20.2",
