--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "zod-validation-error": "0.3.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "7.6.0",
+    "@types/faker": "6.6.9",
     "@types/koa": "2.13.5",
     "@types/koa__router": "12.0.0",
     "@types/node": "18.13.0",
