--- a/.env-template
+++ b/.env-template
@@ -9,6 +9,7 @@ export APP_TEST_URL=${APP_URL_DEV}
 export DATABASE_URL="op://dev/seal-app/dburl"
 export DATABASE_NAME_LIVE=pilotmoon
 export DATABASE_NAME_TEST=testdb
+export DATABASE_NAME_LOGS=rolo_logs
 
 export APP_SECRET_TEST="op://dev/seal-app/app_secret_test"
 
