--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@koa/router": "12.0.0",
     "@pilotmoon/aquatic-prime": "0.1.1",
     "@pilotmoon/chewit": "0.3.0",
+    "@shelacek/ubjson": "1.1.1",
     "@types/koa-bodyparser": "4.3.10",
     "@types/lodash": "4.14.191",
     "@types/ungap__structured-clone": "0.3.0",
