--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
   "private": true,
   "engines": {
     "node": "16.19.0",
-    "npm": "8.19.3"
+    "npm": "9.5.1"
   },
   "dependencies": {
     "@isaacs/ttlcache": "1.2.1",
     "@koa/router": "12.0.0",
     "@pilotmoon/aquatic-prime": "0.1.1",
     "@pilotmoon/chewit": "0.3.0",
-    "@shelacek/ubjson": "1.1.1",
     "@types/koa-bodyparser": "4.3.10",
     "@types/lodash": "4.14.191",
     "@types/ungap__structured-clone": "0.3.0",
     "@ungap/structured-clone": "1.0.1",
     "axios": "1.3.2",
+    "cbor": "8.1.0",
     "colors": "1.4.0",
     "koa": "2.14.1",
     "koa-bodyparser": "4.3.0",
