--- a/.github/workflows/app-test.yml
+++ b/.github/workflows/app-test.yml
@@ -17,6 +17,7 @@ env:
   DATABASE_URL: "${{ vars.DATABASE_URL }}"
   DATABASE_NAME_LIVE: "${{ vars.DATABASE_NAME_LIVE }}"
   DATABASE_NAME_TEST: "${{ vars.DATABASE_NAME_TEST }}"
+  DATABASE_NAME_LOGS: "${{ vars.DATABASE_NAME_LOGS }}"
   COMMIT_HASH: ""
   BOOTSTRAP_SEED: "${{ secrets.BOOTSTRAP_SEED }}"
   APP_SECRET_TEST: "${{ secrets.APP_SECRET_TEST }}"
