--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "1.3.2",
     "cbor": "8.1.0",
     "colors": "1.4.0",
+    "content-disposition-header": "0.6.0",
     "koa": "2.14.1",
     "koa-bodyparser": "4.3.0",
     "lodash": "4.17.21",
