--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "node ./dist/src/server.js",
+    "start": "node ./dist/src/api/server.js",
     "build": "./scripts/build",
     "dev": "./scripts/dev",
     "deploy": "./scripts/deploy",
