--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "lib": [
       "ES2021"
     ],
-    "module": "commonjs",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "module": "ES2020",
     "target": "ES2021",
     "outDir": "dist"
   }
