--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "type": "module",
   "scripts": {
     "start": "node ./dist/src/api/server.js",
+    "start-twix": "node ./dist/src/webhooks/server.js",
     "build": "tsc",
     "dev": "./scripts/dev",
+    "dev-twix": "./scripts/dev-twix",
     "deploy": "./scripts/deploy",
     "test-unit": "./scripts/test-unit",
     "test-local": "./scripts/test-local",
@@ -34,6 +36,7 @@
     "lodash": "4.17.21",
     "mnemonic-id": "3.2.7",
     "mongodb": "5.0.0",
+    "php-serialize": "4.0.2",
     "prando": "6.0.1",
     "zod": "3.20.2",
     "zod-validation-error": "0.3.1"
