Add twix e2e tests

--- a/.env-twix-template
+++ b/.env-twix-template
@@ -1,4 +1,6 @@
 #!/bin/zsh
-export TWIX_APP_PORT="op://dev/seal-app/twix_port"
-export TWIX_APP_URL_DEV="http://localhost:${TWIX_APP_PORT}"
-export TWIX_API_URL="{{ op://dev/seal-app/appurl }}{{ op://dev/seal-app/rolo_path }}"
+export ROLO_URL_CANONICAL="https://api.pilotmoon.com/v2"
+export TWIX_PORT="op://dev/seal-app/twix_port"
+export TWIX_URL_DEV="http://localhost:${TWIX_PORT}"
+export TWIX_URL_ALT="{{ op://dev/seal-app/appurl }}{{ op://dev/seal-app/rolo_path }}"
+export TWIX_TEST_URL=${TWIX_URL_DEV}
