--- a/.github/workflows/app-test.yml
+++ b/.github/workflows/app-test.yml
@@ -29,9 +29,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
-        #node-version: [16.x]
-        mongodb-version: ['6.0', 'latest']
+        #node-version: [16.x, 18.x]
+        node-version: [16.x]
+        #mongodb-version: ['6.0', 'latest']
+        mongodb-version: ['6.0']
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
