--- a/.github/workflows/app-test.yml
+++ b/.github/workflows/app-test.yml
@@ -19,7 +19,7 @@ env:
   DATABASE_NAME_TEST: "${{ vars.DATABASE_NAME_TEST }}"
   DATABASE_NAME_LOGS: "${{ vars.DATABASE_NAME_LOGS }}"
   TWIX_PORT: "${{ vars.TWIX_PORT }}"
-  TWIX_TEST_URL: $"${{ vars.TWIX_TEST_URL }}"
+  TWIX_TEST_URL: "${{ vars.TWIX_TEST_URL }}"
   # secrets
   BOOTSTRAP_SEED: "${{ secrets.BOOTSTRAP_SEED }}"
   APP_SECRET_TEST: "${{ secrets.APP_SECRET_TEST }}"
