--- a/.env-twix-template
+++ b/.env-twix-template
@@ -1,6 +1,19 @@
 #!/bin/zsh
-export ROLO_URL_CANONICAL="https://api.pilotmoon.com/v2"
+
+# how twix will refer to rolo externally
+export ROLO_URL_CANONICAL="op://dev/seal-app/rolo_url_canonical"
+
+# how twix will access rolo
+export ROLO_URL_DEV="http://localhost:{{ op://dev/seal-app/rolo_port }}"
+export ROLO_URL_ALT="{{ op://dev/seal-app/appurl }}{{ op://dev/seal-app/rolo_path }}"
+export ROLO_URL=${ROLO_URL_DEV}
+
 export TWIX_PORT="op://dev/seal-app/twix_port"
-export TWIX_URL_DEV="http://localhost:${TWIX_PORT}"
+export TWIX_URL_DEV="http://localhost:$TWIX_PORT"
 export TWIX_URL_ALT="{{ op://dev/seal-app/appurl }}{{ op://dev/seal-app/twix_path }}"
 export TWIX_TEST_URL=${TWIX_URL_DEV}
+
+export ROLO_APIKEY_TEST="op://dev/webhook_paddle/apikey_test"
+export ROLO_APIKEY_LIVE=""
+export PADDLE_PUBKEY="op://dev/webhook_paddle/paddle_pubkey"
+
