--- a/.github/workflows/app-test.yml
+++ b/.github/workflows/app-test.yml
@@ -58,12 +58,5 @@ jobs:
       uses: BerniWittmann/background-server-action@v1
       with:
         command: npm run test-rolo-local
-        start: npm run start-rolo
-        wait-on: '${{ vars.APP_TEST_URL }}'
-    - name: Run twix E2E tests
-      uses: BerniWittmann/background-server-action@v1
-      with:
-        command: npm run test-twix-local
-        start: npm run start-twix
+        start: npm run start-rolo & npm run start-twix
         wait-on: '${{ vars.APP_TEST_URL }}, ${{ vars.TWIX_TEST_URL }}'
-
