--- a/.github/workflows/app-test.yml
+++ b/.github/workflows/app-test.yml
@@ -54,7 +54,7 @@ jobs:
       with:
         mongodb-version: ${{ matrix.mongodb-version }}
         mongodb-replica-set: rs0
-    - name: Run rolo E2E tests
+    - name: Run E2E tests
       uses: BerniWittmann/background-server-action@v1
       with:
         command: npm run test-local
