determine paddle mode by which signature

--- a/.env-twix-template
+++ b/.env-twix-template
@@ -15,5 +15,5 @@ export TWIX_TEST_URL=${TWIX_URL_DEV}
 
 export ROLO_APIKEY_TEST="op://dev/webhook_paddle/apikey_test"
 export ROLO_APIKEY_LIVE=""
-export PADDLE_PUBKEY="op://dev/webhook_paddle/paddle_pubkey"
-
+export PADDLE_PUBKEY_SANDBOX="op://dev/webhook_paddle/paddle_pubkey_sandbox"
+export PADDLE_PUBKEY_PRODUCTION=""
