--- a/.github/workflows/app-test.yml
+++ b/.github/workflows/app-test.yml
@@ -27,7 +27,8 @@ env:
   APP_SECRET_TEST: "${{ secrets.APP_SECRET_TEST }}"
   ROLO_APIKEY_TEST: "${{ secrets.ROLO_APIKEY_TEST }}"
   ROLO_APIKEY_LIVE: ""
-  PADDLE_PUBKEY: "${{ secrets.PADDLE_PUBKEY }}"
+  PADDLE_PUBKEY_SANDBOX: "${{ secrets.PADDLE_PUBKEY }}"
+  PADDLE_PUBKEY_PRODUCTION: ""
 
 jobs:
   test:
