Add working lizhi license generation

--- a/.env-twix-template
+++ b/.env-twix-template
@@ -17,3 +17,5 @@ export ROLO_APIKEY_TEST="op://dev/webhook_paddle/apikey_test"
 export ROLO_APIKEY_LIVE=""
 export PADDLE_PUBKEY_SANDBOX="op://dev/webhook_paddle/paddle_pubkey_sandbox"
 export PADDLE_PUBKEY_PRODUCTION=""
+export LIZHI_APIKEYS='op://dev/webhook_lizhi/apikeys'
+
