Rename "lizhi" stuff to "store" and "twix"

--- a/.env-twix-template
+++ b/.env-twix-template
@@ -13,9 +13,9 @@ export TWIX_URL_DEV="http://localhost:$TWIX_PORT"
 export TWIX_URL_ALT="{{ op://dev/seal-app/appurl }}{{ op://dev/seal-app/twix_path }}"
 export TWIX_TEST_URL=${TWIX_URL_DEV}
 
-export ROLO_APIKEY_TEST="op://dev/webhook_paddle/apikey_test"
+export ROLO_APIKEY_TEST="op://dev/twix/apikey_test"
 export ROLO_APIKEY_LIVE=""
 export PADDLE_PUBKEY_SANDBOX="op://dev/webhook_paddle/paddle_pubkey_sandbox"
 export PADDLE_PUBKEY_PRODUCTION=""
-export LIZHI_APIKEYS='op://dev/webhook_lizhi/apikeys'
+export TWIX_APIKEYS='op://dev/twix/apikeys'
 
