--- a/.env-twix-template
+++ b/.env-twix-template
@@ -15,7 +15,6 @@ export TWIX_TEST_URL=${TWIX_URL_DEV}
 
 export ROLO_APIKEY_TEST="op://dev/twix/apikey_test"
 export ROLO_APIKEY_LIVE=""
-export PADDLE_PUBKEY_SANDBOX="op://dev/webhook_paddle/paddle_pubkey_sandbox"
-export PADDLE_PUBKEY_PRODUCTION=""
+export PADDLE_CREDENTIALS='{{ op://dev/paddle/paddle_credentials }}'
 export TWIX_APIKEYS='op://dev/twix/apikeys'
 
