--- a/.github/workflows/app-test.yml
+++ b/.github/workflows/app-test.yml
@@ -27,8 +27,7 @@ env:
   APP_SECRET_TEST: "${{ secrets.APP_SECRET_TEST }}"
   ROLO_APIKEY_TEST: "${{ secrets.ROLO_APIKEY_TEST }}"
   ROLO_APIKEY_LIVE: ""
-  PADDLE_PUBKEY_SANDBOX: "${{ secrets.PADDLE_PUBKEY }}"
-  PADDLE_PUBKEY_PRODUCTION: ""
+  PADDLE_CREDENTIALS: "${{ secrets.PADDLE_CREDENTIALS }}"
   TWIX_APIKEYS: "${{ secrets.LIZHI_APIKEYS }}"
 
 jobs:
