--- a/.env-rolo-template
+++ b/.env-rolo-template
@@ -4,7 +4,9 @@ export APP_URL_ALT="{{ op://dev/seal-app/appurl }}{{ op://dev/seal-app/rolo_path
 export APP_URL_DEV="http://localhost:${APP_PORT}"
 export APP_TEST_URL=${APP_URL_DEV}
 
-export DATABASE_URL="mongodb://localhost:27017"
+export DATABASE_URL_DEV="mongodb://localhost:27017"
+export DATABASE_URL_PROD="op://dev/seal-app/dburl"
+export DATABASE_URL=${DATABASE_URL_DEV}
 export DATABASE_NAME_LIVE="op://dev/seal-app/dbname_live"
 export DATABASE_NAME_TEST="op://dev/seal-app/dbname_test"
 export DATABASE_NAME_LOGS="op://dev/seal-app/dbname_logs"
