--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "npm": "9.5.1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "3.385.0",
     "@isaacs/ttlcache": "1.2.1",
     "@koa/router": "12.0.0",
     "@pilotmoon/aquatic-prime": "0.1.1",
