Moving to have twix config stored in registry

--- a/.env-twix-template
+++ b/.env-twix-template
@@ -14,8 +14,7 @@ export TWIX_URL_ALT="{{ op://dev/seal-app/appurl }}{{ op://dev/seal-app/twix_pat
 export TWIX_TEST_URL=${TWIX_URL_DEV}
 
 export ROLO_APIKEY_TEST="op://dev/twix/apikey_test"
-export ROLO_APIKEY_LIVE=""
+export ROLO_APIKEY_LIVE="op://dev/twix/apikey_live"
 export PADDLE_CREDENTIALS='{{ op://dev/paddle/paddle_credentials }}'
 export TWIX_APIKEYS='op://dev/twix/apikeys'
-export SPACES_CONFIG='{{ op://dev/spaces_twix/config_json }}'
 
