--- a/.github/workflows/app-test.yml
+++ b/.github/workflows/app-test.yml
@@ -36,8 +36,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        #node-version: [16.x, 18.x]
-        node-version: [16.x]
+        node-version: [16.x, 18.x]
+        #node-version: [16.x]
         #mongodb-version: ['6.0', 'latest']
         mongodb-version: ['6.0']
     steps:
