--- a/.env-twix-template
+++ b/.env-twix-template
@@ -17,5 +17,6 @@ export ROLO_APIKEY_TEST="op://dev/twix/apikey_test"
 export ROLO_APIKEY_LIVE=""
 export PADDLE_CREDENTIALS='{{ op://dev/paddle/paddle_credentials }}'
 export TWIX_APIKEYS='op://dev/twix/apikeys'
-export SPACES_CONFIG='{{ op://dev/spaces_twix/config_json }}'
-
+export SPACES_CONFIG='{{ op://dev/twix_spaces/config_json }}'
+export SMTP_CONFIG='{{ op://dev/twix_smtp/config_json }}'
+export REPORTS_CONFIG='{{ op://dev/twix_reports/config_json }}'
