--- a/.github/workflows/app-test.yml
+++ b/.github/workflows/app-test.yml
@@ -30,6 +30,8 @@ env:
   PADDLE_CREDENTIALS: "${{ secrets.PADDLE_CREDENTIALS }}"
   TWIX_APIKEYS: "${{ secrets.LIZHI_APIKEYS }}"
   SPACES_CONFIG: "${{ secrets.SPACES_CONFIG }}"
+  SMTP_CONFIG: "${{ secrets.SMTP_CONFIG }}"
+  REPORTS_CONFIG: "${{ secrets.REPORTS_CONFIG }}"
 
 jobs:
   test:
