--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "php-serialize": "4.0.2",
     "pngjs": "7.0.0",
     "prando": "6.0.1",
+    "saslprep": "1.0.3",
     "svgson": "5.3.1",
     "zod": "3.20.2",
     "zod-validation-error": "0.3.1"
