--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "colors": "1.4.0",
     "content-disposition-header": "0.6.0",
     "cron": "2.4.3",
+    "js-sha256": "0.10.1",
     "koa": "2.14.1",
     "koa-bodyparser": "4.3.0",
     "lodash": "4.17.21",
