--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/ungap__structured-clone": "0.3.0",
     "@ungap/structured-clone": "1.0.1",
     "axios": "1.3.2",
+    "case-anything": "2.1.13",
     "cbor": "8.1.0",
     "colors": "1.4.0",
     "content-disposition-header": "0.6.0",
