Icon system starting to come to life

--- a/.env-twix-template
+++ b/.env-twix-template
@@ -20,3 +20,4 @@ export TWIX_APIKEYS='op://dev/twix/apikeys'
 export SPACES_CONFIG='{{ op://dev/twix_spaces/config_json }}'
 export SMTP_CONFIG='{{ op://dev/twix_smtp/config_json }}'
 export REPORTS_CONFIG='{{ op://dev/twix_reports/config_json }}'
+export HMA_ROOT='{{ op://dev/hma/api_root }}'
