--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.385.0",
     "@isaacs/ttlcache": "1.2.1",
+    "@koa/cors": "4.0.0",
     "@koa/router": "12.0.0",
     "@pilotmoon/aquatic-prime": "0.1.1",
     "@pilotmoon/chewit": "0.3.0",
+    "@types/content-type": "1.1.6",
     "@types/koa-bodyparser": "4.3.10",
     "@types/lodash": "4.14.191",
     "@types/ungap__structured-clone": "0.3.0",
@@ -14,6 +16,7 @@
     "cbor": "8.1.0",
     "colors": "1.4.0",
     "content-disposition-header": "0.6.0",
+    "content-type": "1.0.5",
     "cron": "2.4.3",
     "js-sha256": "0.10.1",
     "koa": "2.14.1",
@@ -34,6 +37,7 @@
   "devDependencies": {
     "@faker-js/faker": "7.6.0",
     "@types/koa": "2.13.5",
+    "@types/koa__cors": "4.0.1",
     "@types/koa__router": "12.0.0",
     "@types/node": "18.13.0",
     "@types/node-cron": "3.0.7",
