--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "strict": true,
     "lib": [
-      "ES2021"
+      "ES2021",
+      "DOM"
     ],
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
