--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/nodemailer": "6.4.10",
     "@types/pngjs": "6.0.1",
     "ava": "5.2.0",
+    "prettier": "3.1.0",
     "ts-node": "10.9.1",
     "tsc-watch": "6.0.0",
     "typescript": "4.9.5"
