--- a/.github/workflows/app-test.yml
+++ b/.github/workflows/app-test.yml
@@ -40,8 +40,7 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x, 20.x]
-        #mongodb-version: ['6.0', 'latest']
-        mongodb-version: ["6.0"]
+        mongodb-version: ["6.0", "7.0"]
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
