--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "prando": "6.0.1",
     "saslprep": "1.0.3",
     "svgson": "5.3.1",
-    "zod": "3.20.2",
+    "zod": "3.22.4",
     "zod-validation-error": "0.3.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.3.3",
     "@faker-js/faker": "7.6.0",
     "@types/koa": "2.13.5",
     "@types/koa__cors": "4.0.1",
