Disentangle env files and test scripts

--- a/.env-twix-template
+++ b/.env-twix-template
@@ -1,20 +1,17 @@
 #!/bin/zsh
 
+# own port
+export TWIX_PORT="op://dev/seal-app/twix_port"
+
+# how twix will access rolo
+export ROLO_URL="http://localhost:{{ op://dev/seal-app/rolo_port }}"
+export ROLO_APIKEY_TEST="op://dev/twix/apikey_test"
+export ROLO_APIKEY_LIVE=""
+
 # how twix will refer to rolo externally
 export ROLO_URL_CANONICAL="op://dev/seal-app/rolo_url_canonical"
 
-# how twix will access rolo
-export ROLO_URL_DEV="http://localhost:{{ op://dev/seal-app/rolo_port }}"
-export ROLO_URL_ALT="{{ op://dev/seal-app/appurl }}{{ op://dev/seal-app/rolo_path }}"
-export ROLO_URL=${ROLO_URL_DEV}
-
-export TWIX_PORT="op://dev/seal-app/twix_port"
-export TWIX_URL_DEV="http://localhost:$TWIX_PORT"
-export TWIX_URL_ALT="{{ op://dev/seal-app/appurl }}{{ op://dev/seal-app/twix_path }}"
-export TWIX_TEST_URL=${TWIX_URL_DEV}
-
-export ROLO_APIKEY_TEST="op://dev/twix/apikey_test"
-export ROLO_APIKEY_LIVE=""
+# credentials TODO: move to registry
 export PADDLE_CREDENTIALS='{{ op://dev/paddle/paddle_credentials }}'
 export TWIX_APIKEYS='op://dev/twix/apikeys'
 export SPACES_CONFIG='{{ op://dev/twix_spaces/config_json }}'
