--- a/.github/workflows/app-test.yml
+++ b/.github/workflows/app-test.yml
@@ -59,6 +59,6 @@ jobs:
       - name: Run E2E tests
         uses: BerniWittmann/background-server-action@v1
         with:
-          command: npm run test-local
+          command: npm run test-rolo && npm run test-twix
           start: npm run start-rolo & npm run start-twix
           wait-on: "${{ vars.APP_TEST_URL }}, ${{ vars.TWIX_TEST_URL }}"
