fix package scripts

--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "deploy": "git push origin main:deploy",
     "dev-rolo": "./scripts/dev-rolo",
     "dev-twix": "./scripts/dev-twix",
-    "start-rolo": "node ./dist/src/api/server.js",
-    "start-twix": "node ./dist/src/webhooks/server.js",
+    "start-rolo": "node ./dist/src/rolo/server.js",
+    "start-twix": "node ./dist/src/twix/server.js",
     "test-unit": "npx ava dist/test/testUnit.js",
     "test-rolo": "npx ava dist/test/testRolo.js --serial",
     "test-twix": "npx ava dist/test/testTwix.js --serial",
