more rejiggering of env var names

--- a/.env-twix-template
+++ b/.env-twix-template
@@ -1,10 +1,10 @@
 #!/bin/zsh
 
 # own port
-export TWIX_PORT="op://dev/seal-app/twix_port"
+export TWIX_PORT="1235"
 
 # how twix will access rolo
-export ROLO_URL="http://localhost:{{ op://dev/seal-app/rolo_port }}"
+export ROLO_URL="http://localhost:1234"
 export ROLO_APIKEY_TEST="op://dev/twix/apikey_test"
 export ROLO_APIKEY_LIVE=""
 
