--- a/.env-twixtest-template
+++ b/.env-twixtest-template
@@ -1,4 +1,4 @@
 #!/bin/zsh
-export TWIX_TEST_URL="http://localhost:{{ op://dev/seal-app/twix_port }}"
-export ROLO_URL="http://localhost:{{ op://dev/seal-app/rolo_port }}"
+export ROLO_URL="http://localhost:1234"
+export TWIX_URL="http://localhost:1235"
 export TWIX_APIKEYS='op://dev/twix/apikeys'
