--- a/.env-rolo-template
+++ b/.env-rolo-template
@@ -1,7 +1,6 @@
 #!/bin/zsh
-export APP_PORT="op://dev/seal-app/rolo_port"
+export ROLO_PORT="1234"
 export DATABASE_URL="op://dev/seal-app/dburl"
-export DATABASE_NAME_LIVE="op://dev/seal-app/dbname_live"
-export DATABASE_NAME_TEST="op://dev/seal-app/dbname_test"
-export DATABASE_NAME_LOGS="op://dev/seal-app/dbname_logs"
+export DATABASE_NAME="op://dev/seal-app/dbname"
 export BOOTSTRAP_SEED="op://dev/seal-app/bootstrap_seed"
+export APP_SECRET=""
