--- a/.env-rolotest-template
+++ b/.env-rolotest-template
@@ -1,3 +1,3 @@
 #!/bin/zsh
-export APP_TEST_URL="http://localhost:{{ op://dev/seal-app/rolo_port }}"
+export ROLO_URL="http://localhost:1234"
 export BOOTSTRAP_SEED="op://dev/seal-app/bootstrap_seed"
