--- a/.github/workflows/app-test.yml
+++ b/.github/workflows/app-test.yml
@@ -12,14 +12,13 @@ on:
 
 env:
   # vars
-  APP_PORT: "${{ vars.APP_PORT }}"
-  APP_TEST_URL: "${{ vars.APP_TEST_URL }}"
+  ROLO_PORT: "${{ vars.APP_PORT }}"
   DATABASE_URL: "${{ vars.DATABASE_URL }}"
   DATABASE_NAME_LIVE: "${{ vars.DATABASE_NAME_LIVE }}"
   DATABASE_NAME_TEST: "${{ vars.DATABASE_NAME_TEST }}"
   DATABASE_NAME_LOGS: "${{ vars.DATABASE_NAME_LOGS }}"
   TWIX_PORT: "${{ vars.TWIX_PORT }}"
-  TWIX_TEST_URL: "${{ vars.TWIX_TEST_URL }}"
+  TWIX_URL: "${{ vars.TWIX_TEST_URL }}"
   ROLO_URL: "${{ vars.APP_TEST_URL }}"
   ROLO_URL_CANONICAL: "${{ vars.ROLO_URL_CANONICAL }}"
   # secrets
